--- a/.github/workflows/upgrade-main.yml
+++ b/.github/workflows/upgrade-main.yml
@@ -18,8 +18,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: main
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: "7"
       - name: Install dependencies
-        run: yarn install --check-files --frozen-lockfile
+        run: pnpm i --frozen-lockfile
       - name: Upgrade dependencies
         run: npx projen upgrade
       - name: Find mutations
