--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "rewardful-ts",
   "description": "Unofficial Rewardful's API client for Node.js and Browser",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fl0wo/rewardful-ts.git"
+  },
   "scripts": {
     "build": "npx projen build",
     "bump": "npx projen bump",
@@ -8,7 +12,6 @@
     "compile": "npx projen compile",
     "default": "npx projen default",
     "eject": "npx projen eject",
-    "eslint": "npx projen eslint",
     "package": "npx projen package",
     "post-compile": "npx projen post-compile",
     "post-upgrade": "npx projen post-upgrade",
@@ -21,17 +24,16 @@
     "watch": "npx projen watch",
     "projen": "npx projen"
   },
+  "author": {
+    "name": "Florian Sabani",
+    "email": "sabaniflorian@gmail.com",
+    "organization": false
+  },
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^2",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.9.0",
-    "@typescript-eslint/eslint-plugin": "^8",
-    "@typescript-eslint/parser": "^8",
     "commit-and-tag-version": "^12",
     "constructs": "^10.0.0",
-    "eslint": "^9",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.31.0",
     "jest": "^29.7.0",
     "jest-junit": "^15",
     "projen": "^0.90.2",
@@ -40,6 +42,9 @@
     "typescript": "^5.6.3"
   },
   "pnpm": {},
+  "engines": {
+    "node": " <= 22"
+  },
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "publishConfig": {
