--- a/package.json
+++ b/package.json
@@ -52,6 +52,21 @@
     "zod": "^3.23.8"
   },
   "pnpm": {},
+  "keywords": [
+    "affiliate",
+    "api",
+    "axios",
+    "browser",
+    "client",
+    "http",
+    "nodejs",
+    "openapi",
+    "request",
+    "rewardful",
+    "sdk",
+    "typescript",
+    "zod"
+  ],
   "engines": {
     "node": " <= 22"
   },
