--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "constructs": "^10.0.0",
     "jest": "^29.7.0",
     "jest-junit": "^15",
+    "nock": "^13.5.6",
     "openapi-zod-client": "^1.18.2",
     "openapi3-ts": "^4.4.0",
     "prettier": "^2.8.8",
