Trying to include in the lib only code that matters for execution and types at runtime (excluding build/compile time files)

--- a/.npmignore
+++ b/.npmignore
@@ -22,6 +22,10 @@ dist
 tsconfig.tsbuildinfo
 secret.ts
 secret.example.ts
+.idea
+generate
+*/schemas/*
+*/mock/*
 /.gitattributes
 /.projenrc.ts
 /projenrc
