--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,13 @@
   "include": [
     "src/**/*.ts"
   ],
-  "exclude": []
+  "exclude": [
+    "node_modules",
+    "dist",
+    "coverage",
+    "schema",
+    "generate",
+    "*/schemas/*",
+    "*/mock/*"
+  ]
 }
