--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
+    "yaml": "^2.6.0",
     "zod": "^3.23.8"
   },
   "dependencies": {
